--- a/Planets.html
+++ b/Planets.html
@@ -14,7 +14,7 @@
 
 <script type="text/babel">
 const rootElement = document.getElementById('root')
-    
+
 class PlanetSelector extends React.Component {
   constructor(props) {
     super(props);
@@ -28,7 +28,7 @@ class PlanetSelector extends React.Component {
   }
 
   componentDidMount() {
-    fetch("https://localhost:7105/Planets")
+    fetch("https://localhost:7105/api/Planets")
       .then(res => res.json())
       .then(
         (result) => {
@@ -49,7 +49,7 @@ class PlanetSelector extends React.Component {
   handleChange(event) {
     const planetName = event.target.value
 
-    fetch("https://localhost:7105/Planets/" + planetName)
+    fetch("https://localhost:7105/api/Planets/" + planetName)
       .then(res => res.json())
       .then(
         (result) => {
