--- a/Planets.html
+++ b/Planets.html
@@ -7,6 +7,14 @@
   <script type="application/javascript" src="https://unpkg.com/react@16.0.0/umd/react.production.min.js"></script>
   <script type="application/javascript" src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.production.min.js"></script>
   <script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+
+  <style>
+    body {
+      font-family: cursive;
+      color: lightsteelblue;
+      background: black;
+    }
+  </style>
 </head>
 
 <body>
@@ -76,6 +84,7 @@ class PlanetSelector extends React.Component {
     } else {
       return (
       <div>
+        <h1>Explore the solar system</h1>
         <label>
           Pick a planet:
         </label>
@@ -107,6 +116,7 @@ class PlanetDetail extends React.Component {
     } else {
       return (
       <div>
+        <img src={"https://localhost:7105/" + planet.imageUrl}/>
         <div>Name: {planet.name}</div>
         <div>Diameter: {planet.diameter}</div>
         <div>Distance From Sun: {planet.distanceFromSun}</div>
